fixed logo spacing

--- a/src/components/game/mapLogo.scss
+++ b/src/components/game/mapLogo.scss
@@ -1,7 +1,5 @@
 @use "../shared/variables";
 
-// @use "../../views/main";
-
 .logo {
     @extend .unselectable;
     position: fixed;
@@ -12,17 +10,21 @@
     text-transform: uppercase;
     font-size: 6em;
     letter-spacing: 0;
+
     span {
         font-weight: bolder;
         line-height: 1.3em;
         display: table-cell;
         vertical-align: middle;
+
         span {
             display: block;
         }
+
         span:nth-child(1) {
             padding: 0 0 10px;
         }
+
         span:nth-child(2) {
             padding: 0 15px 10px;
             background: linear-gradient(to right, variables.$mainColor 50%, variables.$mainBGColor 50%);
@@ -44,15 +46,14 @@
     top: 0;
 }
 
-@media screen and (width >= 48em) {
-    #loader, #background {
-        span {
-            span {
-                display: inline-block;
-            }
-            span:nth-child(3) {
-                width: auto;
-            }
+@media screen and (width >=48em) {
+    #loader {
+        span span {
+            display: inline-block;
+        }
+
+        span:nth-child(1) {
+            margin-right: 12px;
         }
     }
 }
